--- a/AutomationTestingFramework/Framework.csproj
+++ b/AutomationTestingFramework/Framework.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -56,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Browser.cs" />
     <Compile Include="Pages\AutomationTestingPracticePage.cs" />
+    <Compile Include="Pages\EditPage.cs" />
     <Compile Include="Pages\LoginPage.cs" />
     <Compile Include="Pages\MyMembershipPage.cs" />
     <Compile Include="Pages\Pages.cs" />
